[package]
name = "ab-radix-trie"
version = "0.2.1"
edition = "2021"
license-file = "LICENSE"
description = "A compressed radix trie implementation supporting matching rules"
homepage = "https://github.com/avnerbarr/radix-trie"
authors = ["Avner Barr <avner.barr@gmail.com>"]
documentation = "https://docs.rs/ab-radix-trie/latest/ab_radix_trie/"
repository = "https://github.com/avnerbarr/radix-trie"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
rand = "0.8.5"
log = "0.4.20"
env_logger = "0.10.1"

[features]
tracing = []
